fix filter to search accross all columns, description cell to break in multiple lines

--- a/src-frontend/src/sass/app/_main-layout.scss
+++ b/src-frontend/src/sass/app/_main-layout.scss
@@ -87,6 +87,9 @@ html {
         }
         .cs-table-cell.col-Description {
             min-width: 15rem;
+            span {
+                white-space: pre-wrap;
+            }
         }
         .cs-table-cell.col-CommercialProductCode {
             min-width: 10.5rem;
